# Midterm_Perception

./: .project  .travis.yml  CMakeLists.txt  README.md  readme.md
app/: CMakeLists.txt  camera.cpp  laserRangeFinder.cpp  main.cpp  objectDetection.cpp  visionSystem.cpp
docs/: Doxyfile
docs/html/: annotated.html  camera_8cpp.html  camera_8hpp.html  camera_8hpp_source.html  classCamera-members.html  classCamera.html  classLaserRangeFinder-members.html  classLaserRangeFinder.html  classObjectDetection-members.html  classObjectDetection.html  classVisionSystem-members.html  classVisionSystem.html  classes.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  laserRangeFinder_8cpp.html  laserRangeFinder_8hpp.html  laserRangeFinder_8hpp_source.html  main_8cpp.html  objectDetection_8cpp.html  objectDetection_8hpp.html  objectDetection_8hpp_source.html  visionSystem_8cpp.html  visionSystem_8hpp.html  visionSystem_8hpp_source.html
docs/latex/: annotated.tex  camera_8cpp.tex  camera_8hpp.tex  classCamera.tex  classLaserRangeFinder.tex  classObjectDetection.tex  classVisionSystem.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  laserRangeFinder_8cpp.tex  laserRangeFinder_8hpp.tex  main_8cpp.tex  (+5 more)
include/: camera.hpp  laserRangeFinder.hpp  objectDetection.hpp  visionSystem.hpp
test/: CMakeLists.txt  cameraTest.cpp  laserRangeFinderTest.cpp  main.cpp  objectDetectionTest.cpp  visionSystemTest.cpp
(+17 files in other folders)
